--- a/index.html
+++ b/index.html
@@ -100,8 +100,32 @@
                     </div>
                     <div id="currentWeather" class="tab-content tab active">
                         <h3>Current Weather</h3>
-                        
-                    </div>
+                        <div>
+                            <input type="text" id="city-input" placeholder="Enter city name" value="Boston">
+                            <select id="unit-select">
+                                <option value="metric">Celsius</option>
+                                <option value="imperial">Fahrenheit</option>
+                            </select>
+                            <button onclick="getWeather()">Get Weather</button>
+                        </div>
+                        <div id="customWeatherWidget" class="weather-widget">
+                            <div>
+                                <h3>Weather in <span id="widgetCityName">City Name</span></h3>
+                                <div class="weather-detail">
+                                    <p>Temperature: <span id="widgetTemp">--</span></p>
+                                    <p>Feels Like: <span id="widgetFeelsLike">--</span></p>
+                                    <p>Humidity: <span id="widgetHumidity">--</span></p>
+                                    <p>Pressure: <span id="widgetPressure">--</span></p>
+                                    <p>Wind: <span id="widgetWind">--</span></p>
+                                    <p>Cloudiness: <span id="widgetClouds">--</span></p>
+                                    <p>Visibility: <span id="widgetVisibility">--</span></p>
+                                    <p>Sunrise: <span id="widgetSunrise">--</span></p>
+                                    <p>Sunset: <span id="widgetSunset">--</span></p>
+                                    <p>Weather Conditions: <span id="widgetDescription">--</span></p>
+                                </div>
+                            </div>    
+                            <img id="weatherIcon" src="" alt="Weather Icon" style="width: 100px; height: 100px;">
+                        </div>                        
                     <div id="hourlyForecast" class="tab-content tab">
                         <h3>Hourly Forecast</h3>
                         
