Fixed weather module bug

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div id="weather" class="module tabbed-interface">
-                        <div id="currentWeather" class="tab-content tab active">
+                        <div id="currentWeather" class="module-content tab active">
                             <h3>Current Weather</h3>
                             <input type="text" id="city-input" placeholder="Enter city name" value="Boston">
                             <select id="unit-select">
