--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
                     </div>
                     <div id="launcher" class="module tabbed-interface">
                         <div class="tab-buttons">
-                            <button class="tab-button active" onclick="switchTab('rememberedApps')">Previous Launches</button>
-                            <button class="tab-button" onclick="switchTab('recentApps')">Recent Apps</button>
+                            <button class="tab-button active" onclick="switchTab('rememberedApps')">Remembered Applications</button>
+                            <button class="tab-button" onclick="switchTab('recentApps')">Recently Used Applications</button>
                         </div>
                         <div id="rememberedApps" class="tab-content tab active">
-                            <h3>Previous Launches</h3>
+                            <h3>Remembered Applications</h3>
                             <table class="apps-table">
                                 <thead>
                                     <tr>
@@ -276,7 +276,7 @@
                             </table>
                         </div>
                         <div id="recentApps" class="tab-content tab">
-                            <h3>Recent Apps</h3>
+                            <h3>Recently Used Applications</h3>
                             <table class="apps-table">
                                 <thead>
                                     <tr>
