--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
                         </div>
                         <div id="search" class="tab-content tab active">
                             <h1>Search</h1>
-                            <input type="text" placeholder="Search songs, albums, or playlists"><br>
-                            <button>Search</button>
+                            <input id="spotifySearch" type="text" placeholder="Search songs, albums, or playlists"><br>
+                            <button onclick="searchSpotify()">Search</button>
                         </div>
                         <div id="playlists" class="tab-content tab">
                             <h1>Playlists</h1>
