--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
                             <h1>Search</h1>
                             <input id="spotifySearch" type="text" placeholder="Search songs, albums, or playlists"><br>
                             <button onclick="searchSpotify()">Search</button>
+                            <div id="artistInfo"></div>
                         </div>
                         <div id="playlists" class="tab-content tab">
                             <h1>Playlists</h1>
