--- a/index.html
+++ b/index.html
@@ -303,8 +303,10 @@
                         </div>
                         <div id="nowPlaying" class="tab-content tab">
                             <h1>Now Playing</h1>
-
-                        </div>
+                            <button onclick="fetchCurrentlyPlaying()">Refresh Now Playing</button>
+                            <div id="nowPlayingInfo"></div>
+                            
+                        </div>                  
                     </div>                    
                     <div id="launcher" class="module tabbed-interface">
                         <div class="tab-buttons">
