--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                 <option value="metric">Celsius</option>
                                 <option value="imperial">Fahrenheit</option>
                             </select>
-                            <button onclick="getWeather()">Get Weather</button>
+                            <button onclick="getWeather(true)">Get Weather</button>
                             <div id="customWeatherWidget" class="tab-content tab active">
                                 <div>
                                     <h3>Weather in <span id="widgetCityName">City Name</span></h3>
