--- a/index.html
+++ b/index.html
@@ -304,8 +304,11 @@
                         <div id="nowPlaying" class="tab-content tab">
                             <h1>Now Playing</h1>
                             <button onclick="fetchCurrentlyPlaying()">Refresh Now Playing</button>
+                            <button id="playNextButton">Play Next Track</button>
+                            <button id="pauseButton">Pause</button>
+                            <button id="resumeButton">Resume</button>
                             <div id="nowPlayingInfo"></div>
-                        </div>                                       
+                        </div>                                                              
                     </div>                    
                     <div id="launcher" class="module tabbed-interface">
                         <div class="tab-buttons">
