--- a/index.html
+++ b/index.html
@@ -299,7 +299,10 @@
                         </div>
                         <div id="playlists" class="tab-content tab">
                             <h1>Playlists</h1>
-
+                            <button id="load-playlists-button">Load Playlists</button>
+                            <div id="playlist-container">
+                                <!-- Playlists will be dynamically inserted here -->
+                            </div>
                         </div>
                         <div id="nowPlaying" class="tab-content tab">
                             <h1>Now Playing</h1>
