--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <div id="customWeatherWidget" class="tab-content tab active">
                                 <div>
                                     <h3>Weather in <span id="widgetCityName">City Name</span></h3>
-                                    <div class="weather-detail">
+                                    <div class="weather-detail weather-module">
                                         <p>Temperature: <span id="widgetTemp">--</span></p>
                                         <p>Feels Like: <span id="widgetFeelsLike">--</span></p>
                                         <p>Humidity: <span id="widgetHumidity">--</span></p>
