Display/Weather update
Cool duel sides chat/module for epic displayage. Fixed voice weather request.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <button onclick="clearHistory('command')">Clear Command History</button>
                         </div>
                     </div>
-                    <div id="chat" class="module">
+                    <div id="chat" class="moduleforchat main">
                         <h1>Chat with Assistant</h1>
                         <div class="chat-history">
                             
