--- a/index.html
+++ b/index.html
@@ -340,19 +340,7 @@
                                         <th>Time</th>
                                     </tr>
                                 </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Launch</td>
-                                        <td>Open opera</td>
-                                        <td>File opened successfully</td>
-                                        <td>2024-06-11 09:00 AM</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Weather</td>
-                                        <td>What's the weather?</td>
-                                        <td>The current weather is sunny, 75°F</td>
-                                        <td>2024-06-11 09:05 AM</td>
-                                    </tr>
+                                <tbody id="historyTable">
                                 </tbody>
                             </table>
                         </div>
